--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -138,10 +138,10 @@ header {
 .disconnect-btn {
   width: 115px;
   height: 30px;
-  background-color: white;
+  background-color: #c2175b;
   border: 1px solid #c2175b;
   border-radius: 5px;
-  color: #c2175b;
+  color: white;
   font-size: 12px;
   transition: 0.3s;
 }
