--- a/src/Components/Hero/hero.scss
+++ b/src/Components/Hero/hero.scss
@@ -18,7 +18,7 @@
 .hero-container div {
   position: absolute;
   top: 100px;
-  left: 40px;
+  left: 3em;
   display: flex;
   flex-direction: column;
   justify-content: center;
