--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,7 +2,7 @@ header {
   height: 100px;
 
   .header-container {
-    max-width: 1280px;
+    max-width: 90%;
     height: 100%;
     margin: auto;
     display: flex;
@@ -26,7 +26,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
   }
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 768px) {
     .header-container {
       max-width: 90%;
     }
