--- a/src/containers/Product/product.scss
+++ b/src/containers/Product/product.scss
@@ -2,6 +2,12 @@
   background-color: #ebedee;
   padding: 30px 0;
 }
+@media screen and (max-width: 560px) {
+  .product-body {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
 
 .product-container {
   max-width: 1280px;
@@ -9,12 +15,28 @@
   display: flex;
   justify-content: space-around;
 }
+@media screen and (max-width: 560px) {
+  .product-container {
+    width: 320px;
+  }
+}
 
 .product-all-pictures {
   display: flex;
   height: 600px;
   width: 450px;
   overflow-x: scroll;
+}
+@media screen and (maw-width: 560px) {
+  .product-all-pictures {
+    display: none;
+  }
+  .product-picture-container {
+    display: none;
+  }
+  .product-picture-container {
+    display: none;
+  }
 }
 
 .product-picture-container {
@@ -27,6 +49,7 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .product-summary {
@@ -119,6 +142,7 @@
   .product-body {
     display: flex;
     justify-content: center;
+    margin: 0 auto;
   }
 
   .product-container {
@@ -130,5 +154,11 @@
     width: 450px;
     height: 600px;
     margin-bottom: 30px;
+  }
+
+  @media screen and (max-width: 560px) {
+    .product-summary {
+      max-width: 90%;
+    }
   }
 }
